--- a/joice-facade/pom.xml
+++ b/joice-facade/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.joice</groupId>
     <artifactId>joice</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
   </parent>
   <artifactId>joice-facade</artifactId>
   <name>joice-facade</name>
