--- a/joice-service/pom.xml
+++ b/joice-service/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.joice</groupId>
 		<artifactId>joice</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>0.0.1</version>
 	</parent>
 	<artifactId>joice-service</artifactId>
 	<packaging>war</packaging>
@@ -16,7 +16,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
+			<artifactId>javax.servlet-api</artifactId>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
