第一个单测通过

--- a/joice-service/pom.xml
+++ b/joice-service/pom.xml
@@ -44,6 +44,10 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
 			<artifactId>spring-jms</artifactId>
 		</dependency>
 		<dependency>
@@ -71,6 +75,17 @@
 			<artifactId>mybatis-spring</artifactId>
 		</dependency>
 		<!-- end mybatis -->
+
+		<!-- MySQL -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+		<!-- druid数据源 -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>javax.servlet</groupId>
