--- a/joice-service/src/main/resources/config/quartz.properties
+++ b/joice-service/src/main/resources/config/quartz.properties
@@ -2,6 +2,8 @@
 org.quartz.scheduler.instanceId = AUTO
 #\u8c03\u5ea6\u6807\u8bc6\u540d\uff0c\u96c6\u7fa4\u4e2d\u6bcf\u4e2a\u8282\u70b9\u90fd\u4f7f\u7528\u76f8\u540c\u7684\u540d\u79f0
 org.quartz.scheduler.instanceName = DefaultQuartzScheduler
+#\u5ffd\u7565\u66f4\u65b0
+org.terracotta.quartz.skipUpdateCheck = true
 
 #\u7ebf\u7a0b\u914d\u7f6e
 org.quartz.threadPool.class = org.quartz.simpl.SimpleThreadPool
