--- a/joice-cache/pom.xml
+++ b/joice-cache/pom.xml
@@ -37,6 +37,12 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.caucho</groupId>
+			<artifactId>hessian</artifactId>
+			<version>4.0.38</version>
+		</dependency>
+
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
