清除joice-cache,重新开始写

--- a/joice-cache/pom.xml
+++ b/joice-cache/pom.xml
@@ -23,6 +23,10 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjrt</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 		</dependency>
