--- a/joice-cache/pom.xml
+++ b/joice-cache/pom.xml
@@ -46,6 +46,12 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
+			<groupId>javax.cache</groupId>
+			<artifactId>cache-api</artifactId>
+			<version>0.3</version>
+		</dependency>
+
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
