--- a/joice-facade/pom.xml
+++ b/joice-facade/pom.xml
@@ -4,7 +4,7 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.joice</groupId>
+		<groupId>com.sunveee.joice</groupId>
 		<artifactId>joice</artifactId>
 		<version>0.0.1</version>
 	</parent>
