--- a/joice-cache-test/pom.xml
+++ b/joice-cache-test/pom.xml
@@ -12,12 +12,15 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<log4j.version>2.5</log4j.version>
-		<slf4j.version>1.7.13</slf4j.version>
-		<com.fasterxml.jackson.version>2.8.9</com.fasterxml.jackson.version>
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>com.joice</groupId>
+			<artifactId>joice-cache</artifactId>
+			<version>0.0.1</version>
+		</dependency>
+	
 		<!-- javaee -->
 		<dependency>
 			<groupId>javax</groupId>
