--- a/joice-cache-test/src/main/resources/log4j.properties
+++ b/joice-cache-test/src/main/resources/log4j.properties
@@ -6,12 +6,12 @@ log4j.appender.Console=org.apache.log4j.ConsoleAppender
 log4j.appender.Console.layout=org.apache.log4j.PatternLayout
 log4j.appender.Console.layout.ConversionPattern=[%p] %d{yyyy-MM-dd HH:mm:ss} %m %n
 
-# ConversionPattern 配置
-# %m 输出代码中指定的消息
-# %p 输出优先级，即DEBUG，INFO，WARN，ERROR，FATAL
-# %r 输出自应用启动到输出该log信息耗费的毫秒数
-# %c 输出所属的类目
-# %t 输出产生该日志事件的线程名
-# %n 输出一个回车换行符，Windows平台为"rn"，Unix平台为"n"
-# %d 输出日志时间点的日期或时间，默认格式为ISO8601，也可以在其后指定格式，比如：%d{yyyy MM dd HH:mm:ss,SSS}
-# %l 输出日志事件的发生位置，包括类目名、发生的线程，以及在代码中的行数
+# ConversionPattern \u914D\u7F6E
+# %m \u8F93\u51FA\u4EE3\u7801\u4E2D\u6307\u5B9A\u7684\u6D88\u606F
+# %p \u8F93\u51FA\u4F18\u5148\u7EA7\uFF0C\u5373DEBUG\uFF0CINFO\uFF0CWARN\uFF0CERROR\uFF0CFATAL
+# %r \u8F93\u51FA\u81EA\u5E94\u7528\u542F\u52A8\u5230\u8F93\u51FA\u8BE5log\u4FE1\u606F\u8017\u8D39\u7684\u6BEB\u79D2\u6570
+# %c \u8F93\u51FA\u6240\u5C5E\u7684\u7C7B\u76EE
+# %t \u8F93\u51FA\u4EA7\u751F\u8BE5\u65E5\u5FD7\u4E8B\u4EF6\u7684\u7EBF\u7A0B\u540D
+# %n \u8F93\u51FA\u4E00\u4E2A\u56DE\u8F66\u6362\u884C\u7B26\uFF0CWindows\u5E73\u53F0\u4E3A"rn"\uFF0CUnix\u5E73\u53F0\u4E3A"n"
+# %d \u8F93\u51FA\u65E5\u5FD7\u65F6\u95F4\u70B9\u7684\u65E5\u671F\u6216\u65F6\u95F4\uFF0C\u9ED8\u8BA4\u683C\u5F0F\u4E3AISO8601\uFF0C\u4E5F\u53EF\u4EE5\u5728\u5176\u540E\u6307\u5B9A\u683C\u5F0F\uFF0C\u6BD4\u5982\uFF1A%d{yyyy MM dd HH:mm:ss,SSS}
+# %l \u8F93\u51FA\u65E5\u5FD7\u4E8B\u4EF6\u7684\u53D1\u751F\u4F4D\u7F6E\uFF0C\u5305\u62EC\u7C7B\u76EE\u540D\u3001\u53D1\u751F\u7684\u7EBF\u7A0B\uFF0C\u4EE5\u53CA\u5728\u4EE3\u7801\u4E2D\u7684\u884C\u6570
