--- a/joice-cache-test/src/main/webapp/WEB-INF/web.xml
+++ b/joice-cache-test/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
 	<display-name>joice-cache-test</display-name>
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:spring-mybatis.xml</param-value>
+		<param-value>classpath:spring-*.xml</param-value>
 	</context-param>
 	<!-- 编码过滤器 -->
 	<filter>
