--- a/joice-cache/pom.xml
+++ b/joice-cache/pom.xml
@@ -14,6 +14,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<hessian.version>4.0.38</hessian.version>
 	</properties>
 
 	<dependencies>
@@ -33,6 +34,11 @@
 		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjrt</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.caucho</groupId>
+			<artifactId>hessian</artifactId>
+			<version>${hessian.version}</version>
 		</dependency>
 		
 		<dependency>
