重构joice-web，增加数据库访问能力

--- a/joice-web/pom.xml
+++ b/joice-web/pom.xml
@@ -67,6 +67,30 @@
 			<artifactId>spring-data-redis</artifactId>
 		</dependency>
 		<!-- end Spring -->
+
+		<!-- mybatis -->
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+		</dependency>
+		<!-- mybatis/spring -->
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis-spring</artifactId>
+		</dependency>
+		<!-- end mybatis -->
+
+		<!-- MySQL -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+		<!-- druid数据源 -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid</artifactId>
+		</dependency>
+
 		<!-- Dubbo -->
 		<dependency>
 			<groupId>com.alibaba</groupId>
