--- a/joice-cache/pom.xml
+++ b/joice-cache/pom.xml
@@ -50,6 +50,12 @@
 			<artifactId>cache-api</artifactId>
 			<version>0.3</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-httpclient</groupId>
+			<artifactId>commons-httpclient</artifactId>
+			<version>3.1</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>junit</groupId>
