完成消息生产与消费，未测试

--- a/joice-service/src/main/resources/config/mq.properties
+++ b/joice-service/src/main/resources/config/mq.properties
@@ -4,6 +4,10 @@ consumerGroup=myPushConsumer
 topic=joice-ms
 tag=orderMsg
 
+payOrderTopic=joice-pay-order-ms
+payOrderTag=order-creation-msg
+
+
 #\u4e8b\u52a1\u6d88\u606f\u751f\u4ea7\u8005\u914d\u7f6e
 txProducerGroup=myTxProducerGroup
 checkThreadPoolMinSize=2
