完成事务消息测试

--- a/joice-web/src/main/resources/config/mq.properties
+++ b/joice-web/src/main/resources/config/mq.properties
@@ -1,5 +1,4 @@
-txProducerGroup=myProducer
+txProducerGroup=pay-order-producer
 namesrvAddr=168.33.131.164:9876
-txProducerGroup=myTxProducerGroup
-payOrderTopic=joice-pay-order-ms
-payOrderTag=order-creation-msg
+topic=joice-ms
+payOrderTag=order-create-msg
