完成顺序消息的开发和测试

--- a/joice-service/src/main/resources/config/mq.properties
+++ b/joice-service/src/main/resources/config/mq.properties
@@ -13,3 +13,9 @@ txProducerGroup=myTxProducerGroup
 checkThreadPoolMinSize=2
 checkThreadPoolMaxSize=5
 checkRequestHoldMax=2000
+
+#\u7528\u6237\u6ce8\u518c\u6d88\u8d39\u8005\u914d\u7f6e
+userRegisterEmailConsumer=user-register-email-consumer
+userRegisterAccountConsumer=user-register-account-consumer
+emailTag=user-register-email
+accountTag=user-register-account
