--- a/joice-web/src/main/resources/config/mq.properties
+++ b/joice-web/src/main/resources/config/mq.properties
@@ -2,3 +2,7 @@ txProducerGroup=pay-order-producer
 namesrvAddr=168.33.131.164:9876
 topic=joice-ms
 payOrderTag=order-create-msg
+
+producerGroup=user-register-producer-group
+emailTag=user-register-email
+accountTag=user-register-account
