--- a/joice-schedule-admin/pom.xml
+++ b/joice-schedule-admin/pom.xml
@@ -8,25 +8,18 @@
 		<artifactId>joice</artifactId>
 		<version>0.0.1</version>
 	</parent>
-	<artifactId>joice-schedule</artifactId>
-	<name>joice-schedule</name>
+	<artifactId>joice-schedule-admin</artifactId>
+	<packaging>war</packaging>
+	<name>joice-schedule-admin Maven Webapp</name>
 	<url>http://maven.apache.org</url>
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
 	<dependencies>
-		<dependency>
-			<groupId>org.quartz-scheduler</groupId>
-			<artifactId>quartz</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.quartz-scheduler</groupId>
-			<artifactId>quartz-jobs</artifactId>
-		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	<build>
+		<finalName>joice-schedule-admin</finalName>
+	</build>
 </project>
