--- a/joice-web/pom.xml
+++ b/joice-web/pom.xml
@@ -149,6 +149,10 @@
 			<artifactId>hystrix-servo-metrics-publisher</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-core</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
