--- a/pom.xml
+++ b/pom.xml
@@ -280,6 +280,11 @@
 				<version>${hystrix.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>org.apache.shiro</groupId>
+				<artifactId>shiro-core</artifactId>
+				<version>${shiro.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
 				<version>4.12</version>
