--- a/joice-web/src/main/resources/config/shiro.ini
+++ b/joice-web/src/main/resources/config/shiro.ini
@@ -2,8 +2,11 @@
 zhang=123,role1,role2
 wang=123,role1
 hu=123,role3
+li=123,role4
 
 [roles]
 role1=system:user:select,system:user:update
 role2=system:user:insert
 role3=system:user:*
+role4=*:*:select
+role5=admin:user:select
