--- a/joice-web/src/main/webapp/WEB-INF/web.xml
+++ b/joice-web/src/main/webapp/WEB-INF/web.xml
@@ -31,6 +31,25 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
+	<!-- shiro config -->
+	<filter>
+		<filter-name>shiroFilter</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+		<init-param>
+			<param-name>targetFilterLifecycle</param-name>
+			<param-value>true</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>shiroFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	<!-- shiro end -->
+	
+	<!-- 此监听器出用于主要为了解决java.beans.Introspector导致内存泄漏的问题 -->
+	<listener>
+		<listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>
+	</listener>
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
